[gd_scene load_steps=84 format=2]

[ext_resource path="res://Sprites/Anims/zeAcordando/frame_04_delay-2s.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Non Playables/ZeAnim.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Interface/seta.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_05_delay-0.2s.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_06_delay-5s.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_00_delay-3s.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_01_delay-3s.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_03_delay-2s.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_02_delay-3s.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_12_delay-0.3s.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_18_delay-0.1s.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_16_delay-0.4s.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_25_delay-0.1s.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_14_delay-0.2s.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_22_delay-0.1s.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_24_delay-0.1s.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_15_delay-0.6s.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_13_delay-0.3s.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_20_delay-0.1s.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_11_delay-0.3s.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_10_delay-0.1s.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_21_delay-0.1s.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_17_delay-0.4s.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_26_delay-0.1s.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_19_delay-0.1s.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_23_delay-0.1s.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_07_delay-2s.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_08_delay-0.1s.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_09_delay-0.1s.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_23_delay-0.2s.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_25_delay-0.2s.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_27_delay-0.2s.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_04_delay-0.5s.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_28_delay-0.2s.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_30_delay-0.2s.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_10_delay-1s.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_05_delay-0.2s.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_17_delay-0.2s.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_19_delay-0.2s.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_22_delay-0.2s.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_03_delay-0.2s.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_26_delay-0.2s.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_24_delay-0.2s.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_31_delay-0.2s.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_13_delay-1s.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_01_delay-0.5s.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_07_delay-0.5s.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_00_delay-0.5s.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_02_delay-3s.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_10_delay-0.2s.png" type="Texture" id=50]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_11_delay-0.2s.png" type="Texture" id=51]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_01_delay-3s.png" type="Texture" id=52]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_16_delay-0.2s.png" type="Texture" id=53]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_21_delay-0.2s.png" type="Texture" id=54]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_29_delay-0.2s.png" type="Texture" id=55]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_09_delay-1s.png" type="Texture" id=56]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_02_delay-0.5s.png" type="Texture" id=57]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_07_delay-0.2s.png" type="Texture" id=58]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_12_delay-0.2s.png" type="Texture" id=59]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_03_delay-0.5s.png" type="Texture" id=60]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_06_delay-0.5s.png" type="Texture" id=61]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_12_delay-1s.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_00_delay-0.3s.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_04_delay-0.2s.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_08_delay-2s.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_11_delay-1s.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_09_delay-0.2s.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_08_delay-0.2s.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_13_delay-0.2s.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Anims/zeQuarto/frame_14_delay-1s.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_14_delay-0.2s.png" type="Texture" id=71]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_15_delay-0.2s.png" type="Texture" id=72]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_06_delay-0.2s.png" type="Texture" id=73]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_18_delay-0.2s.png" type="Texture" id=74]
[ext_resource path="res://Sprites/Anims/zeCozinha/frame_20_delay-0.2s.png" type="Texture" id=75]
[ext_resource path="res://Sprites/Anims/zeAcordando/frame_05_delay-0.5s.png" type="Texture" id=76]
[ext_resource path="res://Sprites/Anims/zeTransito/ZeCozinha (1)32.png" type="Texture" id=77]
[ext_resource path="res://Sprites/Anims/zeTransito/frame_0_delay-0.2s.png" type="Texture" id=78]
[ext_resource path="res://Sprites/Anims/zeTransito/ZeBusao.png" type="Texture" id=79]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 10 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 25 ), ExtResource( 19 ), ExtResource( 22 ), ExtResource( 15 ), ExtResource( 26 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 24 ), ExtResource( 48 ), ExtResource( 46 ), ExtResource( 57 ), ExtResource( 60 ), ExtResource( 33 ), ExtResource( 76 ), ExtResource( 61 ), ExtResource( 47 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 65 ), ExtResource( 65 ), ExtResource( 56 ), ExtResource( 36 ), ExtResource( 66 ), ExtResource( 62 ), ExtResource( 45 ), ExtResource( 70 ), ExtResource( 63 ), ExtResource( 52 ), ExtResource( 49 ) ],
"loop": false,
"name": "default",
"speed": 1.3
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 41 ), ExtResource( 64 ), ExtResource( 37 ), ExtResource( 73 ), ExtResource( 58 ), ExtResource( 68 ), ExtResource( 67 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 59 ), ExtResource( 69 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 53 ), ExtResource( 38 ), ExtResource( 74 ), ExtResource( 39 ), ExtResource( 75 ), ExtResource( 54 ), ExtResource( 40 ), ExtResource( 30 ), ExtResource( 43 ), ExtResource( 31 ), ExtResource( 42 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 55 ), ExtResource( 35 ), ExtResource( 44 ) ],
"loop": false,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ) ],
"loop": false,
"name": "default",
"speed": 0.5
} ]

[node name="ZeAnim" type="Node2D"]
position = Vector2( 180, 320 )
script = ExtResource( 2 )

[node name="zeAcordando" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 5 )

[node name="zeQuarto" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )
frame = 1

[node name="zeCozinha" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 3 )
frame = 28

[node name="zeTransito" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 4 )
frame = 2

[node name="Seta" type="Sprite" parent="."]
position = Vector2( -140, -280 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )

[node name="TextureButton" type="TextureButton" parent="Seta"]
margin_left = -40.0
margin_top = -40.0
margin_right = 40.0
margin_bottom = 40.0

[connection signal="animation_finished" from="zeAcordando" to="." method="_on_zeAcordando_animation_finished"]
[connection signal="animation_finished" from="zeQuarto" to="." method="_on_zeQuarto_animation_finished"]
[connection signal="animation_finished" from="zeCozinha" to="." method="_on_zeCozinha_animation_finished"]
[connection signal="animation_finished" from="zeTransito" to="." method="_on_zeTransito_animation_finished"]
[connection signal="pressed" from="Seta/TextureButton" to="." method="_on_TextureButton_pressed"]
